# HousingModel

./: .dmypy.json  AKER_PROPERTY_MODEL_IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  codex.patch  codex_2.patch  demo_complete_aker_integration.py  demo_complete_market_scoring_workflow.py  prefect.toml  pyproject.toml  pytest.ini  sample_asset_fit_scenarios.csv  sources.yml  sources_supplement.yml  supply_calculators_demo.py  test_complete_aker_integration.py  test_complete_market_scoring_workflow.py  test_optimize_cadence_simple.py  test_state_packs_simple.py  test_supply_calculators.py  test_supply_integration.py
.github/workflows/: ci.yml
.hypothesis/constants/: 04064c7b8381c25d  067df3ae03a8e62d  0811bb728ca89cb8  0b4fce498d0d9a52  0e0eb9d99d2efe1a  0e93b9382ba63d19  0f665a1e285588a4  1222c0cc53acfce5  13dfd483f6ced9f1  15d91b8da39c9b28  168719886ad6051d  1942db246fc35558  1bd62974fba68460  1ee1732946f9b97f  1f06951eff7f5168  211b5fc696499591  253a714034a97cb8  25691c9fffbed5d7  2a350982106fb892  2bd3a8262d86f873  2c134541bf880d02  2c42db41e55b4860  2d6a2a4e3d2629a4  2e5cfd754594746a  2f872f7b8ad410d5  3211f548a2bb19b6  33fc2915581c04a8  35f7dd3c1d79d0f4  39802d707d6553e4  3a129023c3283d25  3af1c7ebe4fb5941  3d9215db1299bea6  3f97aadc23e4515a  40e25710965fee68  419edf1d752acb88  42a910497820b3e6  43b71ea7e2cd8019  446f259f96e9fcf9  457e7bb540bc7a58  (+86 more)
alembic/: env.py  script.py.mako
docs/: innovation_jobs.md  pillar_scoring_guide.md  supply_calculators_guide.md
flows/: __init__.py  base.py  collect_permits.py  deal_rank_refresh.py  deployments.py  refresh_amenity_benchmarks.py  refresh_boundaries.py  refresh_economic_indicators.py  refresh_geocoding_cache.py  refresh_hazard_metrics.py  refresh_housing_market.py  refresh_market_data.py  refresh_materialized.py  score_all_markets.py
ge_suites/: acs.yml  asset_performance.yml  market_analytics.yml  market_data.yml  permits.yml  supply_metrics.yml
gx/: great_expectations.yml
openspec/: project.md
scripts/: demo_supply_calculators.py  deploy_and_monitor_supply_calculators.py  deploy_supply_calculators.py  enforce_documentation.py  run_flows.py  run_ops_etl.py  run_supply_etl_pipeline.py  setup_database_migration.py  validate_quality_gate.py
templates/: ic_memo.docx  module_docstring_template.py
tests/: conftest.py  test_asset_fit_engine.py  test_basic.py  test_boundary_geocoding_etl.py  test_cache.py  test_cache_env.py  test_connectors.py  test_data_crud.py  test_data_geometry.py  test_data_lake.py  test_deal_ranking.py  test_deployments.py  test_excel_exports.py  test_expansions_ingestor.py  test_geospatial.py  test_governance.py  test_governance_integration.py  test_governance_performance.py  test_index_and_constraints.py  test_isochrone_engine.py  test_market_score_composer.py  test_market_score_service.py  test_materialized_tables.py  test_memo_service.py  test_metadata_health.py  test_migration_steps.py  test_migrations.py  test_models_extras.py  test_ops_brand_dashboard.py  test_ops_engine.py  test_ops_integration.py  test_ops_performance.py  test_permits.py  test_portfolio_exposure.py  test_state_packs.py  test_state_packs_integration.py  test_state_packs_performance.py  test_terrain.py  test_types_and_engine.py  test_urban_metrics.py  (+2 more)
(+559 files in other folders)
