[project]
name = "HousingModel"
version = "0.1.0"
description = "HousingModel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "SQLAlchemy",
    "alembic",
    "geoalchemy2",
    "pyarrow",
    "duckdb>=0.10,<1",
    "great-expectations>=0.18,<1",
    "structlog>=24.1,<25",
    "prometheus-client",
    "requests-cache",
    "tenacity",
    "prefect",
    "geopandas",
    "shapely",
    "pyproj",
    "feedparser",
    "beautifulsoup4",
    "pandas",
    "hypothesis>=6.90",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
strict = true
